2014-03-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Do not try to find holding space when no
	  holding disk are used.

2014-03-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Make a non blocking connection.

2014-03-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Log empty part.
	* installcheck/Amanda_Taper_Scribe.pl: Fix for Scribe change.
	* installcheck/taper.pl: Fix for Scribe change.

2014-03-11  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.h: Fix constant.
	* amar-src/amarchiver.c: Do not append attribute id (16) to filename
	  on extraction.
	* installcheck/Amanda_Archive.pl: Add check.
	* installcheck/amarchiver.pl: Add check.
	* perl/Amanda/Archive.swg: Document and export attribute id.

2014-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix READY message.

2014-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Util.swg (setup_application): Call glib_init.

2014-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix perl warning.

2014-03-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.h (struct disk_s): Add orig_holdingdisk.
	* server-src/diskfile.c: Set orig_holdingdisk.
	* server-src/driver.c: Use orig_holdingdisk to report error.
	* server-src/planner.c: Improve message.

2014-02-28  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c, device-src/s3-device.c,
	  device-src/tape-device.c, device-src/xfer-dest-device.c,
	  src/xfer-source-device.c, device-src/xfer-source-recovery.c,
	  xfer-src/element-glue.c: Correctly report memory allocation error
	  for large buffer.

2014-02-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Protocol.pm: Add READY Message.
	* perl/Amanda/Taper/Scribe.pm: Call
	  $self->{'feedback'}->scribe_ready();
	* perl/Amanda/Taper/Worker.pm (scribe_ready): New method to send the