@@ -1,3 +1,6 @@
+2014-03-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* amar-src/amarchiver.c: Create parent directory on extraction.
+
 2014-03-14  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/driver.c: Do not try to find holding space when no
 	  holding disk are used.
